@@ -1,3 +1,8 @@
+2006-08-16  John Finlay  <finlay@moeraki.com>
+
+	* docs/reference/pygobject-functions.xml: Update docs for
+	gobject functions.
+
 2006-08-15  Murray Cumming  <murrayc@murrayc.com>
 
 	* gobject/pygobject-private.h:
